fix: correct service types